--- a/Knight-Game-2/Base.lproj/Main.storyboard
+++ b/Knight-Game-2/Base.lproj/Main.storyboard
@@ -1,13 +1,20 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <mutableArray key="BLKCHCRY.TTF">
+            <string>BlackChancery</string>
+        </mutableArray>
+    </customFonts>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Knight_Game_2" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +22,129 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg" translatesAutoresizingMaskIntoConstraints="NO" id="xta-Ls-RH5">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="NVQ-be-Nxc">
+                                <rect key="frame" x="0.0" y="297" width="600" height="318"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="200" translatesAutoresizingMaskIntoConstraints="NO" id="Tbi-Ag-gcV">
+                                        <rect key="frame" x="24" y="0.0" width="552" height="255"/>
+                                        <subviews>
+                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="cEq-Es-VzN">
+                                                <rect key="frame" x="0.0" y="0.0" width="176" height="255"/>
+                                                <subviews>
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sWt-7c-CB1" userLabel="Player1Attack">
+                                                        <rect key="frame" x="20" y="0.0" width="136" height="50"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="width" constant="136" id="Xl0-0R-ahy"/>
+                                                            <constraint firstAttribute="height" constant="50" id="pne-ul-bsL"/>
+                                                        </constraints>
+                                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                                        <state key="normal" title="ATTACK" backgroundImage="player1attackbtn">
+                                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                        </state>
+                                                    </button>
+                                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="oger" translatesAutoresizingMaskIntoConstraints="NO" id="U7g-Wq-Sjb" userLabel="player1">
+                                                        <rect key="frame" x="0.0" y="65" width="176" height="190"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="width" secondItem="U7g-Wq-Sjb" secondAttribute="height" multiplier="88:95" id="fBv-vu-ec0"/>
+                                                            <constraint firstAttribute="height" constant="190" id="gfp-iM-OEJ"/>
+                                                            <constraint firstAttribute="width" constant="176" id="lAl-a0-OK6"/>
+                                                        </constraints>
+                                                        <variation key="default">
+                                                            <mask key="constraints">
+                                                                <exclude reference="lAl-a0-OK6"/>
+                                                            </mask>
+                                                        </variation>
+                                                    </imageView>
+                                                </subviews>
+                                            </stackView>
+                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="frL-ET-2kg">
+                                                <rect key="frame" x="376" y="0.0" width="176" height="255"/>
+                                                <subviews>
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QPm-E8-3Rg" userLabel="Player2Attack">
+                                                        <rect key="frame" x="20" y="0.0" width="136" height="50"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="width" constant="136" id="QmH-ov-CUq"/>
+                                                            <constraint firstAttribute="height" constant="50" id="lyl-to-ZRV"/>
+                                                        </constraints>
+                                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                                        <state key="normal" title="ATTACK" backgroundImage="player1attackbtn">
+                                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                        </state>
+                                                    </button>
+                                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="player" translatesAutoresizingMaskIntoConstraints="NO" id="xBE-rT-R7i" userLabel="player2">
+                                                        <rect key="frame" x="0.0" y="65" width="176" height="190"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="width" secondItem="xBE-rT-R7i" secondAttribute="height" multiplier="88:95" id="51e-6M-tpM"/>
+                                                            <constraint firstAttribute="height" constant="190" id="GXY-QK-F0N"/>
+                                                            <constraint firstAttribute="width" constant="176" id="S2C-uD-3o9"/>
+                                                        </constraints>
+                                                        <variation key="default">
+                                                            <mask key="constraints">
+                                                                <exclude reference="S2C-uD-3o9"/>
+                                                            </mask>
+                                                        </variation>
+                                                    </imageView>
+                                                </subviews>
+                                            </stackView>
+                                        </subviews>
+                                    </stackView>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ground" translatesAutoresizingMaskIntoConstraints="NO" id="11p-Rg-HcN">
+                                        <rect key="frame" x="0.0" y="255" width="600" height="63"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="63" id="T7r-Pt-5SP"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
+                            </stackView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="text-holder" translatesAutoresizingMaskIntoConstraints="NO" id="DDa-zT-ie4">
+                                <rect key="frame" x="100" y="553" width="400" height="45"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="45" id="Edv-0N-29X"/>
+                                    <constraint firstAttribute="width" constant="400" id="HJd-or-NgO"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Attack your foe!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7ws-Yq-YOX" userLabel="ScreenOutput">
+                                <rect key="frame" x="105" y="555" width="390" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="Mkm-Bd-L4U"/>
+                                    <constraint firstAttribute="width" constant="390" id="v08-yV-kBp"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="BlackChancery" family="BlackChancery" pointSize="30"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="DDa-zT-ie4" secondAttribute="bottom" constant="10" id="0ez-cg-H8t"/>
+                            <constraint firstItem="NVQ-be-Nxc" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="75T-Sz-CTf"/>
+                            <constraint firstItem="DDa-zT-ie4" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="77D-Ys-h5B"/>
+                            <constraint firstAttribute="trailing" secondItem="NVQ-be-Nxc" secondAttribute="trailing" id="8Ud-22-Kfe"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="7ws-Yq-YOX" secondAttribute="bottom" constant="12" id="D7O-BK-ZxV"/>
+                            <constraint firstItem="7ws-Yq-YOX" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="DcZ-WL-TBJ"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="NVQ-be-Nxc" secondAttribute="bottom" id="USq-ZL-zht"/>
+                            <constraint firstAttribute="trailing" secondItem="xta-Ls-RH5" secondAttribute="trailing" id="YoF-RP-aNw"/>
+                            <constraint firstItem="xta-Ls-RH5" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="bR5-X5-K7J"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="xta-Ls-RH5" secondAttribute="bottom" id="q95-Fa-qZY"/>
+                            <constraint firstItem="xta-Ls-RH5" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="swL-gh-MaT"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="305" y="354"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="bg" width="1024" height="677"/>
+        <image name="ground" width="1024" height="106"/>
+        <image name="oger" width="241" height="348"/>
+        <image name="player" width="406" height="441"/>
+        <image name="player1attackbtn" width="212" height="78"/>
+        <image name="text-holder" width="696" height="106"/>
+    </resources>
 </document>
