--- a/Knight-Game-2/Base.lproj/Main.storyboard
+++ b/Knight-Game-2/Base.lproj/Main.storyboard
@@ -50,8 +50,11 @@
                                                                 <state key="normal" title="ATTACK" backgroundImage="player1attackbtn">
                                                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                                 </state>
+                                                                <connections>
+                                                                    <action selector="Player1BtnPressed" destination="BYZ-38-t0r" eventType="touchUpInside" id="jFw-v5-BCa"/>
+                                                                </connections>
                                                             </button>
-                                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="oger" translatesAutoresizingMaskIntoConstraints="NO" id="U7g-Wq-Sjb" userLabel="player1">
+                                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="oger1" translatesAutoresizingMaskIntoConstraints="NO" id="U7g-Wq-Sjb" userLabel="player1">
                                                                 <rect key="frame" x="0.0" y="65" width="176" height="190"/>
                                                                 <constraints>
                                                                     <constraint firstAttribute="width" secondItem="U7g-Wq-Sjb" secondAttribute="height" multiplier="88:95" id="fBv-vu-ec0"/>
@@ -104,8 +107,11 @@
                                                                 <state key="normal" title="ATTACK" backgroundImage="player1attackbtn">
                                                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                                 </state>
+                                                                <connections>
+                                                                    <action selector="Player2BtnPressed" destination="BYZ-38-t0r" eventType="touchUpInside" id="teI-BI-jZI"/>
+                                                                </connections>
                                                             </button>
-                                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="player" translatesAutoresizingMaskIntoConstraints="NO" id="xBE-rT-R7i" userLabel="player2">
+                                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="knight2" translatesAutoresizingMaskIntoConstraints="NO" id="xBE-rT-R7i" userLabel="player2">
                                                                 <rect key="frame" x="0.0" y="65" width="176" height="190"/>
                                                                 <constraints>
                                                                     <constraint firstAttribute="width" secondItem="xBE-rT-R7i" secondAttribute="height" multiplier="88:95" id="51e-6M-tpM"/>
@@ -165,6 +171,15 @@
                             <constraint firstItem="xta-Ls-RH5" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="swL-gh-MaT"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="Player1Btn" destination="sWt-7c-CB1" id="4qD-Aj-rhs"/>
+                        <outlet property="Player1HP" destination="PA3-Uk-cbw" id="E27-IQ-uUA"/>
+                        <outlet property="Player1Img" destination="U7g-Wq-Sjb" id="tgA-BD-Tcd"/>
+                        <outlet property="Player2Btn" destination="QPm-E8-3Rg" id="eZJ-jM-dfs"/>
+                        <outlet property="Player2HP" destination="jID-XH-kLS" id="fHL-zi-pHV"/>
+                        <outlet property="Player2Img" destination="xBE-rT-R7i" id="fKn-QQ-jmN"/>
+                        <outlet property="ScreenOutput" destination="7ws-Yq-YOX" id="cvk-fa-ipT"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
@@ -174,8 +189,8 @@
     <resources>
         <image name="bg" width="1024" height="677"/>
         <image name="ground" width="1024" height="106"/>
-        <image name="oger" width="241" height="348"/>
-        <image name="player" width="406" height="441"/>
+        <image name="knight2" width="406" height="441"/>
+        <image name="oger1" width="241" height="348"/>
         <image name="player1attackbtn" width="212" height="78"/>
         <image name="text-holder" width="696" height="106"/>
     </resources>
